refactor and fixed download/upload

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# transform kc, ps to graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -36,68 +44,15 @@
     "    recursively_change_shape(idx, shape)\n",
     "\n",
     "G.add_edges_from([(int(first), int(second)) for first, second in follow[['kc1', 'kc2']].to_numpy()], color='silver')\n",
-    "#pos = nx.spring_layout(G, scale=scale, center=(scale//2, scale//2), k=0.1)\n",
     "pos = graphviz_layout(G, prog=\"dot\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def is_element_edge(element):\n",
-    "    return 'source' in element['data']\n",
-    "\n",
-    "def graph_index_from_elements(element):\n",
-    "    if 'data' in element:\n",
-    "        return int(element['data']['id'][1:])\n",
-    "    return int(element['id'][1:])\n",
-    "\n",
-    "def edge_pair_from_elements(element):\n",
-    "    return int(element['data']['source'][1:]), int(element['data']['target'][1:])\n",
-    "\n",
-    "def garph_index_to_elements(idx, edge=False):\n",
-    "    return f'e{idx}' if edge else f'n{idx}'\n",
-    "\n",
-    "\n",
-    "def graph_edge_as_elements(source, target, params):\n",
-    "    return {\n",
-    "        'data': {\n",
-    "            'source': garph_index_to_elements(source),\n",
-    "            'target': garph_index_to_elements(target),\n",
-    "            'color': params['color']\n",
-    "        }\n",
-    "    }\n",
-    "\n",
-    "def graph_as_elements(G, pos):\n",
-    "    elements = [{\n",
-    "            'data': {\n",
-    "                'id': garph_index_to_elements(idx),\n",
-    "                'label':params['label'],\n",
-    "                'color': params['color']\n",
-    "            } | params, \n",
-    "            'position': {'x': pos[idx][0], 'y': pos[idx][1]}\n",
-    "        } for idx, params in G.nodes(data=True) ]\n",
-    "    elements += [graph_edge_as_elements(s, t, params) for s, t, params in G.edges(data=True)]\n",
-    "    return elements\n",
-    "\n",
-    "def graph_from_elements(elements):\n",
-    "    G = nx.DiGraph(size=SIZE)\n",
-    "    G.add_nodes_from([(graph_index_from_elements(elem), elem['data'])\n",
-    "                      for elem in elements if 'source' not in elem['data']])\n",
-    "    G.add_edges_from([edge_pair_from_elements(elem) for elem in elements if 'source' in elem['data'] and elem['data']['color'] == 'black'], color='black')\n",
-    "    G.add_edges_from([edge_pair_from_elements(elem) for elem in elements if 'source' in elem['data'] and elem['data']['color'] == 'silver'], color='silver')\n",
-    "    return G"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_from_elements(graph_as_elements(G, pos)).nodes(data=True)[1]"
+    "# application"
    ]
   },
   {
@@ -113,6 +68,7 @@
     "from dash import callback_context as ctx\n",
     "from jupyter_dash import JupyterDash\n",
     "from dash.exceptions import PreventUpdate\n",
+    "from src.graph import graph_as_elements, graph_from_elements, is_element_edge, graph_index_from_elements, graph_edge_as_elements\n",
     "\n",
     "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.FLATLY])\n",
     "\n",
@@ -181,6 +137,7 @@
    "outputs": [],
    "source": [
     "from base64 import b64decode\n",
+    "import io\n",
     "\n",
     "@app.callback(\n",
     "    Output('graph_elems', 'data'),\n",
@@ -188,8 +145,13 @@
     "    prevent_initial_call=True,\n",
     ")\n",
     "def upload_graph(upload):\n",
-    "    # TODO more robust solution\n",
-    "    # return json.loads(b64decode(upload).decode('latin1'))\n",
+    "    # the cake is a lie\n",
+    "    \"\"\"\n",
+    "    TODO uncomment and update graph.json\n",
+    "    content_type, content_string = upload.split(\",\")\n",
+    "    decoded = b64decode(content_string)\n",
+    "    return json.loads(io.BytesIO(decoded).getvalue())\n",
+    "    \"\"\"\n",
     "    return graph_as_elements(G, pos)\n",
     "\n",
     "\n",
@@ -239,17 +201,17 @@
     ")\n",
     "def update_graph(mode, selected, elements, new_elements, layout):\n",
     "    if ctx.triggered_id == 'graph_elems':\n",
-    "        graph = graph_from_elements(new_elements)\n",
+    "        graph = graph_from_elements(new_elements, size=SIZE)\n",
     "        position = graphviz_layout(graph, prog=layout)\n",
     "        return graph_as_elements(graph, position)\n",
     "    \n",
     "    if ctx.triggered_id == 'layout_select':\n",
-    "        graph = graph_from_elements(elements)\n",
+    "        graph = graph_from_elements(elements, size=SIZE)\n",
     "        position = graphviz_layout(graph, prog=layout)\n",
     "        return graph_as_elements(graph, position)\n",
     "\n",
     "    if ctx.triggered[0]['prop_id'].split('.')[1] == 'selectedNodeData':\n",
-    "        graph = graph_from_elements(elements)\n",
+    "        graph = graph_from_elements(elements, size=SIZE)\n",
     "        for i in range(len(elements)):\n",
     "            if is_element_edge(elements[i]):\n",
     "                continue\n",
