--- a/main.ipynb
+++ b/main.ipynb
@@ -68,66 +68,15 @@
     "from dash import callback_context as ctx\n",
     "from jupyter_dash import JupyterDash\n",
     "from dash.exceptions import PreventUpdate\n",
-    "from src.graph import graph_as_elements, graph_from_elements, is_element_edge, graph_index_from_elements, graph_edge_as_elements\n",
+    "import src.graph as g\n",
+    "from src.layout import make_layout\n",
+    "from src.utils import dbc_upload\n",
     "\n",
     "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.FLATLY])\n",
     "\n",
     "styles = json.load(open('styles.json', 'r'))\n",
     "\n",
-    "options = [{'label':val, 'value':val} for val in ['dot', 'fdp', 'twopi', 'circo']] # twopi, sfdp, circo\n",
-    "tool_panel = dbc.Card(dbc.CardBody(dbc.Row([\n",
-    "    dbc.Col(dbc.Select(\n",
-    "        id='layout_select',\n",
-    "        placeholder=f\"Layout ({options[0]['label']})\", # options[0]['label']\n",
-    "        options=options,\n",
-    "    ), width=2),\n",
-    "    dbc.Col(dbc.RadioItems(\n",
-    "        id=\"mode_btn\",\n",
-    "        className=\"btn-group\",\n",
-    "        inputClassName=\"btn-check\",\n",
-    "        labelClassName=\"btn btn-outline-primary\",\n",
-    "        labelCheckedClassName=\"active\",\n",
-    "        options=[\n",
-    "            {\"label\": name, \"value\": val} for val, name in enumerate(['Explore', 'Add/Remove edges', 'TBD'])\n",
-    "        ],\n",
-    "        value=0\n",
-    "    ), width=6),\n",
-    "    dbc.Col(\n",
-    "        dcc.Upload(dbc.Button('Upload Graph'), id='upload_graph'),\n",
-    "        width=2\n",
-    "    ),\n",
-    "    dbc.Col(\n",
-    "        dbc.Button('Download Graph', id='download_btn'),\n",
-    "        width=2\n",
-    "    ),\n",
-    "])))\n",
-    "\n",
-    "main_graph = dbc.Row(dbc.Col(\n",
-    "    html.Div(cyto.Cytoscape(\n",
-    "        id='cytoscape',\n",
-    "        elements=[],\n",
-    "        style=styles['cytoscape'],\n",
-    "        layout={'name': 'preset', 'directed': True},\n",
-    "        responsive=False,\n",
-    "        autoRefreshLayout=False,\n",
-    "        stylesheet=styles['stylesheet']\n",
-    "    ))\n",
-    "))\n",
-    "\n",
-    "meta = html.Div([\n",
-    "    #html.Div(id = 'last_clicked', style={'display':'none'}),\n",
-    "    html.Div(id='test'),\n",
-    "    dcc.Download(id='download'),\n",
-    "    dcc.Store(id='graph_elems'),\n",
-    "])\n",
-    "\n",
-    "app.layout = html.Div(dbc.Container([\n",
-    "    tool_panel,\n",
-    "    html.Br(),\n",
-    "    main_graph,\n",
-    "    html.Br(),\n",
-    "    meta,\n",
-    "]))"
+    "app.layout = make_layout(styles)"
    ]
   },
   {
@@ -142,17 +91,14 @@
     "@app.callback(\n",
     "    Output('graph_elems', 'data'),\n",
     "    Input('upload_graph', 'contents'),\n",
-    "    prevent_initial_call=True,\n",
+    "    # prevent_initial_call=True,  TODO uncomment\n",
     ")\n",
     "def upload_graph(upload):\n",
-    "    # the cake is a lie\n",
     "    \"\"\"\n",
     "    TODO uncomment and update graph.json\n",
-    "    content_type, content_string = upload.split(\",\")\n",
-    "    decoded = b64decode(content_string)\n",
-    "    return json.loads(io.BytesIO(decoded).getvalue())\n",
+    "    return dbc_upload(upload)\n",
     "    \"\"\"\n",
-    "    return graph_as_elements(G, pos)\n",
+    "    return g.graph_as_elements(G, pos)  # the cake is a lie\n",
     "\n",
     "\n",
     "@app.callback(\n",
@@ -165,13 +111,6 @@
     "    if ctx.triggered_id == 'download_btn':\n",
     "        return dcc.send_string(json.dumps(data), filename='updated_graph.json')\n",
     "    raise PreventUpdate\n",
-    "\n",
-    "\n",
-    "def filter_for_edge(edge):\n",
-    "    return lambda e: 'source' not in e['data'] or \\\n",
-    "        'target' not in e['data'] or \\\n",
-    "        e['data']['source'] != edge['data']['source'] or \\\n",
-    "        e['data']['target'] != edge['data']['target']\n",
     "\n",
     "\n",
     "@app.callback(\n",
@@ -201,33 +140,33 @@
     ")\n",
     "def update_graph(mode, selected, elements, new_elements, layout):\n",
     "    if ctx.triggered_id == 'graph_elems':\n",
-    "        graph = graph_from_elements(new_elements, size=SIZE)\n",
+    "        graph = g.graph_from_elements(new_elements, size=SIZE)\n",
     "        position = graphviz_layout(graph, prog=layout)\n",
-    "        return graph_as_elements(graph, position)\n",
+    "        return g.graph_as_elements(graph, position)\n",
     "    \n",
     "    if ctx.triggered_id == 'layout_select':\n",
-    "        graph = graph_from_elements(elements, size=SIZE)\n",
+    "        graph = g.graph_from_elements(elements, size=SIZE)\n",
     "        position = graphviz_layout(graph, prog=layout)\n",
-    "        return graph_as_elements(graph, position)\n",
+    "        return g.graph_as_elements(graph, position)\n",
     "\n",
     "    if ctx.triggered[0]['prop_id'].split('.')[1] == 'selectedNodeData':\n",
-    "        graph = graph_from_elements(elements, size=SIZE)\n",
+    "        graph = g.graph_from_elements(elements, size=SIZE)\n",
     "        for i in range(len(elements)):\n",
-    "            if is_element_edge(elements[i]):\n",
+    "            if g.is_element_edge(elements[i]):\n",
     "                continue\n",
     "            elif any(elements[i]['data']['id'] == s['id'] for s in selected):\n",
     "                elements[i]['data']['color'] = 'red'\n",
-    "            elif any(graph_index_from_elements(elements[i]) in graph.successors(graph_index_from_elements(s)) for s in selected):\n",
+    "            elif any(g.graph_index_from_elements(elements[i]) in graph.successors(g.graph_index_from_elements(s)) for s in selected):\n",
     "                elements[i]['data']['color'] = 'orange'\n",
-    "            elif any(graph_index_from_elements(elements[i]) in graph.predecessors(graph_index_from_elements(s)) for s in selected):\n",
+    "            elif any(g.graph_index_from_elements(elements[i]) in graph.predecessors(g.graph_index_from_elements(s)) for s in selected):\n",
     "                elements[i]['data']['color'] = 'yellow'\n",
     "            else:\n",
     "                elements[i]['data']['color'] = 'black'\n",
     "\n",
     "        if mode == 1 and len(selected) >= 2:\n",
-    "            edge = graph_edge_as_elements(graph_index_from_elements(selected[-2]), graph_index_from_elements(selected[-1]), {'color':'blue'})\n",
+    "            edge = g.graph_edge_as_elements(g.graph_index_from_elements(selected[-2]), g.graph_index_from_elements(selected[-1]), {'color':'blue'})\n",
     "            old_length = len(elements)\n",
-    "            elements = list(filter(filter_for_edge(edge), elements))\n",
+    "            elements = g.filter_edge_from_elements(edge, elements)\n",
     "            if len(elements) == old_length:\n",
     "                elements.append(edge)\n",
     "            \n",
