refactor and better layout support

--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# transform kc, ps to graph"
+    "# transform kc, ps to initial graph"
    ]
   },
   {
@@ -56,27 +56,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import dash_cytoscape as cyto\n",
-    "import dash_bootstrap_components as dbc\n",
-    "import src.custom_components as cc\n",
-    "from dash import dcc, html, Input, Output\n",
-    "from dash import callback_context as ctx\n",
-    "from jupyter_dash import JupyterDash\n",
-    "from dash.exceptions import PreventUpdate\n",
-    "import src.graph as g\n",
-    "from src.layout import make_layout\n",
-    "from src.utils import dbc_upload\n",
-    "\n",
-    "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.FLATLY])\n",
-    "\n",
-    "styles = json.load(open('styles.json', 'r'))\n",
-    "\n",
-    "app.layout = make_layout(styles)"
+    "## layout"
    ]
   },
   {
@@ -85,9 +69,126 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from base64 import b64decode\n",
-    "import io\n",
+    "import dash_cytoscape as cyto\n",
+    "import dash_bootstrap_components as dbc\n",
+    "import json\n",
+    "from dash import dcc, html\n",
     "\n",
+    "# cannot be put into separate file of klay layout stops working!\n",
+    "\n",
+    "def make_layout(styles, graph_layouts):\n",
+    "    options = [{'label':val, 'value':val} for val in graph_layouts.keys()]\n",
+    "    tool_panel = dbc.Card(dbc.CardBody(dbc.Row([\n",
+    "        dbc.Col(dbc.Select(\n",
+    "            id='layout_select',\n",
+    "            placeholder=f\"Layout ({options[0]['label']})\", # options[0]['label']\n",
+    "            options=options,\n",
+    "        ), width=2),\n",
+    "        dbc.Col(dbc.RadioItems(\n",
+    "            id=\"mode_btn\",\n",
+    "            className=\"btn-group\",\n",
+    "            inputClassName=\"btn-check\",\n",
+    "            labelClassName=\"btn btn-outline-primary\",\n",
+    "            labelCheckedClassName=\"active\",\n",
+    "            options=[\n",
+    "                {\"label\": name, \"value\": val} for val, name in enumerate(['Explore', 'Add/Remove edges', 'TBD'])\n",
+    "            ],\n",
+    "            value=0\n",
+    "        ), width=6),\n",
+    "        dbc.Col(\n",
+    "            dcc.Upload(dbc.Button('Upload Graph'), id='upload_graph'),\n",
+    "            width=2\n",
+    "        ),\n",
+    "        dbc.Col(\n",
+    "            dbc.Button('Download Graph', id='download_btn'),\n",
+    "            width=2\n",
+    "        ),\n",
+    "    ])))\n",
+    "\n",
+    "    main_graph = dbc.Row(dbc.Col(\n",
+    "        html.Div(cyto.Cytoscape(\n",
+    "            id='cytoscape',\n",
+    "            elements=[],\n",
+    "            style=styles['cytoscape'],\n",
+    "            layout={'name': 'preset', 'directed': True},\n",
+    "            responsive=False,\n",
+    "            autoRefreshLayout=False,\n",
+    "            stylesheet=styles['stylesheet']\n",
+    "        ))\n",
+    "    ))\n",
+    "\n",
+    "    meta = html.Div([\n",
+    "        #html.Div(id = 'last_clicked', style={'display':'none'}),\n",
+    "        html.Div(id='test'),\n",
+    "        dcc.Download(id='download'),\n",
+    "        dcc.Store(id='graph_elems'),\n",
+    "    ])\n",
+    "\n",
+    "    layout = html.Div(dbc.Container([\n",
+    "        tool_panel,\n",
+    "        html.Br(),\n",
+    "        main_graph,\n",
+    "        html.Br(),\n",
+    "        meta,\n",
+    "    ]))\n",
+    "    return layout"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dash_bootstrap_components as dbc\n",
+    "import src.graph as g\n",
+    "import dash_cytoscape as cyto\n",
+    "from dash import dcc, Input, Output\n",
+    "from dash import callback_context as ctx\n",
+    "from jupyter_dash import JupyterDash\n",
+    "from dash.exceptions import PreventUpdate\n",
+    "from src.layout import make_layout\n",
+    "from src.utils import dbc_upload\n",
+    "\n",
+    "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.FLATLY])\n",
+    "\n",
+    "styles = json.load(open('styles.json', 'r'))\n",
+    "\n",
+    "# GV layouts: 'dot', 'fdp', 'twopi', 'circo', 'sfdp'\n",
+    "cyto.load_extra_layouts()\n",
+    "layouts = {\n",
+    "    'GVdot': {'call': lambda G: (graphviz_layout(G, prog='dot'), {'name': 'preset'}), 'scale_x':1, 'scale_y':1},\n",
+    "    'CytoKlay': {'call': lambda G: (None, {'name': 'klay'}), 'scale_x':1, 'scale_y':1},\n",
+    "    'GVtwopi': {'call': lambda G: (graphviz_layout(G, prog='twopi'), 'preset'), 'scale_x':1, 'scale_y':1},\n",
+    "    # TODO breadthfirst with multiple roots\n",
+    "    # TODO graphviz experiment with layouts and scales\n",
+    "}\n",
+    "\n",
+    "app.layout = make_layout(styles, layouts)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## callbacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "@app.callback(\n",
     "    Output('graph_elems', 'data'),\n",
     "    Input('upload_graph', 'contents'),\n",
@@ -113,6 +214,7 @@
     "    raise PreventUpdate\n",
     "\n",
     "\n",
+    "# TODO delete\n",
     "@app.callback(\n",
     "    Output('test', 'children'),\n",
     "    Input('cytoscape', 'elements'),\n",
@@ -121,35 +223,38 @@
     "    return ''\n",
     "\n",
     "\n",
-    "def modify_by_id(elements, id, key, value):\n",
-    "    elems = [elem for elem in elements if elem['data']['id'] == id]\n",
-    "    if len(elems) != 1:\n",
-    "        raise RuntimeError(f'Detected {len(elems)} elements for {id=}. Expected 1.')\n",
-    "    elem = elems[0]\n",
-    "    elem['data'][key] = value\n",
-    "    return [elem for elem in elements if elem['data']['id'] != id] + [elem]\n",
+    "def update_layout(elements, layout):\n",
+    "    if layout is None:\n",
+    "        layout = next(iter(layouts.keys()))\n",
+    "    graph = g.graph_from_elements(elements, size=SIZE)\n",
+    "    position, cyto_layout = layouts[layout]['call'](graph)\n",
+    "    return g.graph_as_elements(\n",
+    "        graph,\n",
+    "        position,\n",
+    "        layouts[layout]['scale_x'],\n",
+    "        layouts[layout]['scale_y']\n",
+    "    )\n",
     "\n",
     "@app.callback(\n",
-    "        Output('cytoscape', 'elements'),\n",
+    "        [\n",
+    "            Output('cytoscape', 'elements'),\n",
+    "            Output('cytoscape', 'layout'),\n",
+    "        ],\n",
     "        Input('mode_btn', 'value'),\n",
     "        Input('cytoscape', 'selectedNodeData'),\n",
     "        Input('cytoscape', 'elements'),\n",
     "        Input('graph_elems', 'data'),\n",
     "        Input('layout_select', 'value'),\n",
+    "        Input('cytoscape', 'layout'),\n",
     "        prevent_initial_call=True,\n",
     ")\n",
-    "def update_graph(mode, selected, elements, new_elements, layout):\n",
+    "def update_graph(mode, selected, elements, new_elements, layout, prev_layout):\n",
     "    if ctx.triggered_id == 'graph_elems':\n",
-    "        graph = g.graph_from_elements(new_elements, size=SIZE)\n",
-    "        position = graphviz_layout(graph, prog=layout)\n",
-    "        return g.graph_as_elements(graph, position)\n",
-    "    \n",
-    "    if ctx.triggered_id == 'layout_select':\n",
-    "        graph = g.graph_from_elements(elements, size=SIZE)\n",
-    "        position = graphviz_layout(graph, prog=layout)\n",
-    "        return g.graph_as_elements(graph, position)\n",
-    "\n",
-    "    if ctx.triggered[0]['prop_id'].split('.')[1] == 'selectedNodeData':\n",
+    "        return update_layout(new_elements, layout)\n",
+    "    elif ctx.triggered_id == 'layout_select':\n",
+    "        return update_layout(elements, layout)  \n",
+    "    elif ctx.triggered[0]['prop_id'].split('.')[1] == 'selectedNodeData':\n",
+    "        # highlight\n",
     "        graph = g.graph_from_elements(elements, size=SIZE)\n",
     "        for i in range(len(elements)):\n",
     "            if g.is_element_edge(elements[i]):\n",
@@ -163,6 +268,7 @@
     "            else:\n",
     "                elements[i]['data']['color'] = 'black'\n",
     "\n",
+    "        # add edge\n",
     "        if mode == 1 and len(selected) >= 2:\n",
     "            edge = g.graph_edge_as_elements(g.graph_index_from_elements(selected[-2]), g.graph_index_from_elements(selected[-1]), {'color':'blue'})\n",
     "            old_length = len(elements)\n",
@@ -170,9 +276,17 @@
     "            if len(elements) == old_length:\n",
     "                elements.append(edge)\n",
     "            \n",
-    "        return elements\n",
+    "        return elements, prev_layout\n",
     "\n",
     "    raise PreventUpdate\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## run"
    ]
   },
   {
