--- a/main.ipynb
+++ b/main.ipynb
@@ -155,7 +155,6 @@
     "from dash import callback_context as ctx\n",
     "from jupyter_dash import JupyterDash\n",
     "from dash.exceptions import PreventUpdate\n",
-    "from src.layout import make_layout\n",
     "from src.utils import dbc_upload\n",
     "\n",
     "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.FLATLY])\n",
@@ -166,7 +165,7 @@
     "cyto.load_extra_layouts()\n",
     "layouts = {\n",
     "    'GVdot': {'call': lambda G: (graphviz_layout(G, prog='dot'), {'name': 'preset'}), 'scale_x':1, 'scale_y':1},\n",
-    "    'CytoKlay': {'call': lambda G: (None, {'name': 'klay'}), 'scale_x':1, 'scale_y':1},\n",
+    "    'CytoKlay': {'call': lambda G: (None, {'name': 'klay'}), 'scale_x':1, 'scale_y':1},  # TODO figure out how to pass edge weights to engine\n",
     "    'GVtwopi': {'call': lambda G: (graphviz_layout(G, prog='twopi'), 'preset'), 'scale_x':1, 'scale_y':1},\n",
     "    # TODO breadthfirst with multiple roots\n",
     "    # TODO graphviz experiment with layouts and scales\n",
