--- a/main.ipynb
+++ b/main.ipynb
@@ -17,7 +17,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pnede\\AppData\\Local\\Temp\\ipykernel_18668\\3145435150.py:31: DeprecationWarning: nx.nx_pydot.graphviz_layout depends on the pydot package, which hasknown issues and is not actively maintained. Consider usingnx.nx_agraph.graphviz_layout instead.\n",
+      "C:\\Users\\pnede\\AppData\\Local\\Temp\\ipykernel_19756\\3145435150.py:31: DeprecationWarning: nx.nx_pydot.graphviz_layout depends on the pydot package, which hasknown issues and is not actively maintained. Consider usingnx.nx_agraph.graphviz_layout instead.\n",
       "\n",
       "See https://github.com/networkx/networkx/issues/5723\n",
       "  pos = graphviz_layout(G, prog=\"dot\")\n"
@@ -157,21 +157,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NoLayoutException",
-     "evalue": "Layout must be a dash component or a function that returns a dash component.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNoLayoutException\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 24\u001b[0m\n\u001b[0;32m     15\u001b[0m cyto\u001b[39m.\u001b[39mload_extra_layouts()\n\u001b[0;32m     16\u001b[0m layouts \u001b[39m=\u001b[39m {\n\u001b[0;32m     17\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mGVdot\u001b[39m\u001b[39m'\u001b[39m: {\u001b[39m'\u001b[39m\u001b[39mcall\u001b[39m\u001b[39m'\u001b[39m: \u001b[39mlambda\u001b[39;00m G: (graphviz_layout(G, prog\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mdot\u001b[39m\u001b[39m'\u001b[39m), {\u001b[39m'\u001b[39m\u001b[39mname\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mpreset\u001b[39m\u001b[39m'\u001b[39m}), \u001b[39m'\u001b[39m\u001b[39mscale_x\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m1\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mscale_y\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m1\u001b[39m},\n\u001b[0;32m     18\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mCytoKlay\u001b[39m\u001b[39m'\u001b[39m: {\u001b[39m'\u001b[39m\u001b[39mcall\u001b[39m\u001b[39m'\u001b[39m: \u001b[39mlambda\u001b[39;00m G: (\u001b[39mNone\u001b[39;00m, {\u001b[39m'\u001b[39m\u001b[39mname\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mklay\u001b[39m\u001b[39m'\u001b[39m}), \u001b[39m'\u001b[39m\u001b[39mscale_x\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m1\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mscale_y\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m1\u001b[39m},  \u001b[39m# TODO figure out how to pass edge weights to engine\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[39m# TODO graphviz experiment with layouts and scales\u001b[39;00m\n\u001b[0;32m     22\u001b[0m }\n\u001b[1;32m---> 24\u001b[0m app\u001b[39m.\u001b[39;49mlayout \u001b[39m=\u001b[39m make_layout(styles, layouts)\n",
-      "File \u001b[1;32mc:\\Users\\pnede\\Desktop\\git projects\\iv127-graph-visualization\\.venv\\lib\\site-packages\\dash\\dash.py:606\u001b[0m, in \u001b[0;36mDash.layout\u001b[1;34m(self, value)\u001b[0m\n\u001b[0;32m    604\u001b[0m \u001b[39m@layout\u001b[39m\u001b[39m.\u001b[39msetter\n\u001b[0;32m    605\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mlayout\u001b[39m(\u001b[39mself\u001b[39m, value):\n\u001b[1;32m--> 606\u001b[0m     _validate\u001b[39m.\u001b[39;49mvalidate_layout_type(value)\n\u001b[0;32m    607\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_layout_is_function \u001b[39m=\u001b[39m callable(value)\n\u001b[0;32m    608\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_layout \u001b[39m=\u001b[39m value\n",
-      "File \u001b[1;32mc:\\Users\\pnede\\Desktop\\git projects\\iv127-graph-visualization\\.venv\\lib\\site-packages\\dash\\_validate.py:386\u001b[0m, in \u001b[0;36mvalidate_layout_type\u001b[1;34m(value)\u001b[0m\n\u001b[0;32m    384\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mvalidate_layout_type\u001b[39m(value):\n\u001b[0;32m    385\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(value, (Component, patch_collections_abc(\u001b[39m\"\u001b[39m\u001b[39mCallable\u001b[39m\u001b[39m\"\u001b[39m))):\n\u001b[1;32m--> 386\u001b[0m         \u001b[39mraise\u001b[39;00m exceptions\u001b[39m.\u001b[39mNoLayoutException(\n\u001b[0;32m    387\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mLayout must be a dash component \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    388\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mor a function that returns a dash component.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    389\u001b[0m         )\n",
-      "\u001b[1;31mNoLayoutException\u001b[0m: Layout must be a dash component or a function that returns a dash component."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dash_bootstrap_components as dbc\n",
     "import src.graph as g\n",
@@ -191,7 +177,7 @@
     "layouts = {\n",
     "    'GVdot': {'call': lambda G: (graphviz_layout(G, prog='dot'), {'name': 'preset'}), 'scale_x':1, 'scale_y':1},\n",
     "    'CytoKlay': {'call': lambda G: (None, {'name': 'klay'}), 'scale_x':1, 'scale_y':1},  # TODO figure out how to pass edge weights to engine\n",
-    "    'GVtwopi': {'call': lambda G: (graphviz_layout(G, prog='twopi'), 'preset'), 'scale_x':1, 'scale_y':1},\n",
+    "    'GVtwopi': {'call': lambda G: (graphviz_layout(G, prog='twopi'), {'name': 'preset'}), 'scale_x':1, 'scale_y':1},\n",
     "    # TODO breadthfirst with multiple roots\n",
     "    # TODO graphviz experiment with layouts and scales\n",
     "}\n",
@@ -209,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +243,7 @@
     "        position,\n",
     "        layouts[layout]['scale_x'],\n",
     "        layouts[layout]['scale_y']\n",
-    "    )\n",
+    "    ), cyto_layout\n",
     "\n",
     "@app.callback(\n",
     "        [\n",
@@ -315,9 +301,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pnede\\AppData\\Local\\Temp\\ipykernel_19756\\1795791743.py:17: DeprecationWarning:\n",
+      "\n",
+      "nx.nx_pydot.graphviz_layout depends on the pydot package, which hasknown issues and is not actively maintained. Consider usingnx.nx_agraph.graphviz_layout instead.\n",
+      "\n",
+      "See https://github.com/networkx/networkx/issues/5723\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash app running on http://127.0.0.1:8050/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pnede\\AppData\\Local\\Temp\\ipykernel_19756\\1795791743.py:19: DeprecationWarning:\n",
+      "\n",
+      "nx.nx_pydot.graphviz_layout depends on the pydot package, which hasknown issues and is not actively maintained. Consider usingnx.nx_agraph.graphviz_layout instead.\n",
+      "\n",
+      "See https://github.com/networkx/networkx/issues/5723\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    app.run_server(debug=True)"
