layout scaling factor

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,20 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pnede\\AppData\\Local\\Temp\\ipykernel_19756\\3145435150.py:31: DeprecationWarning: nx.nx_pydot.graphviz_layout depends on the pydot package, which hasknown issues and is not actively maintained. Consider usingnx.nx_agraph.graphviz_layout instead.\n",
-      "\n",
-      "See https://github.com/networkx/networkx/issues/5723\n",
-      "  pos = graphviz_layout(G, prog=\"dot\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import networkx as nx\n",
@@ -76,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,9 +81,9 @@
     "    tool_panel = dbc.Card(dbc.CardBody(dbc.Row([\n",
     "        dbc.Col(dbc.Select(\n",
     "            id='layout_select',\n",
-    "            placeholder=f\"Layout ({options[0]['label']})\", # options[0]['label']\n",
+    "            placeholder=f\"Layout ({options[0]['label']})\",\n",
     "            options=options,\n",
-    "        ), width=2),\n",
+    "        )),\n",
     "        dbc.Col(dbc.RadioItems(\n",
     "            id=\"mode_btn\",\n",
     "            className=\"btn-group\",\n",
@@ -105,15 +94,17 @@
     "                {\"label\": name, \"value\": val} for val, name in enumerate(['Explore', 'Add/Remove edges', 'TBD'])\n",
     "            ],\n",
     "            value=0\n",
-    "        ), width=6),\n",
+    "        )),\n",
     "        dbc.Col(\n",
     "            dcc.Upload(dbc.Button('Upload Graph'), id='upload_graph'),\n",
-    "            width=2\n",
     "        ),\n",
     "        dbc.Col(\n",
     "            dbc.Button('Download Graph', id='download_btn'),\n",
-    "            width=2\n",
     "        ),\n",
+    "        dbc.Col(dbc.Card(dbc.Row([\n",
+    "            dbc.Col(dbc.CardBody(dbc.Input(id='x_scale', type='number', placeholder='X scale'))),\n",
+    "            dbc.Col(dbc.CardBody(dbc.Input(id='y_scale', type='number', placeholder='Y scale'))),\n",
+    "        ]))),\n",
     "    ])))\n",
     "\n",
     "    main_graph = dbc.Row(dbc.Col(\n",
@@ -155,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,9 +166,9 @@
     "# GV layouts: 'dot', 'fdp', 'twopi', 'circo', 'sfdp'\n",
     "cyto.load_extra_layouts()\n",
     "layouts = {\n",
-    "    'GVdot': {'call': lambda G: (graphviz_layout(G, prog='dot'), {'name': 'preset'}), 'scale_x':1, 'scale_y':1},\n",
+    "    'GVdot': {'call': lambda G: (nx.nx_agraph.pygraphviz_layout(G, prog='dot'), {'name': 'preset'}), 'scale_x':1, 'scale_y':1},\n",
     "    'CytoKlay': {'call': lambda G: (None, {'name': 'klay'}), 'scale_x':1, 'scale_y':1},  # TODO figure out how to pass edge weights to engine\n",
-    "    'GVtwopi': {'call': lambda G: (graphviz_layout(G, prog='twopi'), {'name': 'preset'}), 'scale_x':1, 'scale_y':1},\n",
+    "    'GVtwopi': {'call': lambda G: (nx.nx_agraph.pygraphviz_layout(G, prog='twopi'), {'name': 'preset'}), 'scale_x':1, 'scale_y':1},\n",
     "    # TODO breadthfirst with multiple roots\n",
     "    # TODO graphviz experiment with layouts and scales\n",
     "}\n",
@@ -195,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +224,7 @@
     "    return ''\n",
     "\n",
     "\n",
-    "def update_layout(elements, layout):\n",
+    "def update_layout(elements, layout, x_scale, y_scale):\n",
     "    if layout is None:\n",
     "        layout = next(iter(layouts.keys()))\n",
     "    graph = g.graph_from_elements(elements, size=SIZE)\n",
@@ -241,8 +232,8 @@
     "    return g.graph_as_elements(\n",
     "        graph,\n",
     "        position,\n",
-    "        layouts[layout]['scale_x'],\n",
-    "        layouts[layout]['scale_y']\n",
+    "        x_scale if x_scale is not None else layouts[layout]['scale_x'],\n",
+    "        y_scale if y_scale is not None else layouts[layout]['scale_y']\n",
     "    ), cyto_layout\n",
     "\n",
     "@app.callback(\n",
@@ -256,13 +247,15 @@
     "        Input('graph_elems', 'data'),\n",
     "        Input('layout_select', 'value'),\n",
     "        Input('cytoscape', 'layout'),\n",
+    "        Input('x_scale', 'value'),\n",
+    "        Input('y_scale', 'value'),\n",
     "        prevent_initial_call=True,\n",
     ")\n",
-    "def update_graph(mode, selected, elements, new_elements, layout, prev_layout):\n",
+    "def update_graph(mode, selected, elements, new_elements, layout, prev_layout, x_scale, y_scale):\n",
     "    if ctx.triggered_id == 'graph_elems':\n",
-    "        return update_layout(new_elements, layout)\n",
-    "    elif ctx.triggered_id == 'layout_select':\n",
-    "        return update_layout(elements, layout)  \n",
+    "        return update_layout(new_elements, layout, x_scale, y_scale)\n",
+    "    elif ctx.triggered_id == 'layout_select' or ctx.triggered_id == 'x_scale' or ctx.triggered_id == 'y_scale':\n",
+    "        return update_layout(elements, layout, x_scale, y_scale)\n",
     "    elif ctx.triggered[0]['prop_id'].split('.')[1] == 'selectedNodeData':\n",
     "        # highlight\n",
     "        graph = g.graph_from_elements(elements, size=SIZE)\n",
@@ -301,41 +294,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pnede\\AppData\\Local\\Temp\\ipykernel_19756\\1795791743.py:17: DeprecationWarning:\n",
-      "\n",
-      "nx.nx_pydot.graphviz_layout depends on the pydot package, which hasknown issues and is not actively maintained. Consider usingnx.nx_agraph.graphviz_layout instead.\n",
-      "\n",
-      "See https://github.com/networkx/networkx/issues/5723\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dash app running on http://127.0.0.1:8050/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pnede\\AppData\\Local\\Temp\\ipykernel_19756\\1795791743.py:19: DeprecationWarning:\n",
-      "\n",
-      "nx.nx_pydot.graphviz_layout depends on the pydot package, which hasknown issues and is not actively maintained. Consider usingnx.nx_agraph.graphviz_layout instead.\n",
-      "\n",
-      "See https://github.com/networkx/networkx/issues/5723\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    app.run_server(debug=True)"
