--- a/main.ipynb
+++ b/main.ipynb
@@ -78,34 +78,42 @@
     "\n",
     "def make_layout(styles, graph_layouts):\n",
     "    options = [{'label':val, 'value':val} for val in graph_layouts.keys()]\n",
-    "    tool_panel = dbc.Card(dbc.CardBody(dbc.Row([\n",
-    "        dbc.Col(dbc.Select(\n",
-    "            id='layout_select',\n",
-    "            placeholder=f\"Layout ({options[0]['label']})\",\n",
-    "            options=options,\n",
-    "        )),\n",
-    "        dbc.Col(dbc.RadioItems(\n",
-    "            id=\"mode_btn\",\n",
-    "            className=\"btn-group\",\n",
-    "            inputClassName=\"btn-check\",\n",
-    "            labelClassName=\"btn btn-outline-primary\",\n",
-    "            labelCheckedClassName=\"active\",\n",
-    "            options=[\n",
-    "                {\"label\": name, \"value\": val} for val, name in enumerate(['Explore', 'Add/Remove edges', 'TBD'])\n",
-    "            ],\n",
-    "            value=0\n",
-    "        )),\n",
-    "        dbc.Col(\n",
-    "            dcc.Upload(dbc.Button('Upload Graph'), id='upload_graph'),\n",
-    "        ),\n",
-    "        dbc.Col(\n",
-    "            dbc.Button('Download Graph', id='download_btn'),\n",
-    "        ),\n",
-    "        dbc.Col(dbc.Card(dbc.Row([\n",
-    "            dbc.Col(dbc.CardBody(dbc.Input(id='x_scale', type='number', placeholder='X scale'))),\n",
-    "            dbc.Col(dbc.CardBody(dbc.Input(id='y_scale', type='number', placeholder='Y scale'))),\n",
-    "        ]))),\n",
-    "    ])))\n",
+    "    download_panel = dbc.Row([\n",
+    "        dbc.Col(dcc.Upload(dbc.Button('Upload', color=\"info\"), id='upload_graph'), width=6),\n",
+    "        dbc.Col(dbc.Button('Download', id='download_btn', color=\"info\"), width=6),\n",
+    "    ])\n",
+    "    graph_scale_panel = dbc.Card(dbc.Row([\n",
+    "        dbc.Col(dbc.CardBody(dbc.Input(id='x_scale', type='number', placeholder='X scale'))),\n",
+    "        dbc.Col(dbc.CardBody(dbc.Input(id='y_scale', type='number', placeholder='Y scale'))),\n",
+    "    ]))\n",
+    "    mode_panel = dbc.RadioItems(\n",
+    "        id=\"mode_btn\",\n",
+    "        className=\"btn-group\",\n",
+    "        inputClassName=\"btn-check\",\n",
+    "        labelClassName=\"btn btn-outline-primary\",\n",
+    "        labelCheckedClassName=\"active\",\n",
+    "        options=[\n",
+    "            {\"label\": name, \"value\": val} for val, name in enumerate(['Explore', 'Add/Remove edges', 'TBD'])\n",
+    "        ],\n",
+    "        value=0\n",
+    "    )\n",
+    "    layout_panel = dbc.Select(\n",
+    "        id='layout_select',\n",
+    "        placeholder=f\"Layout ({options[0]['label']})\",\n",
+    "        options=options,\n",
+    "    )\n",
+    "\n",
+    "    tool_panel = dbc.Card(dbc.CardBody([\n",
+    "        dbc.Row([\n",
+    "            dbc.Col(download_panel),\n",
+    "            dbc.Col(mode_panel),\n",
+    "        ]),\n",
+    "        html.Br(),\n",
+    "        dbc.Row([\n",
+    "            dbc.Col(layout_panel),\n",
+    "            dbc.Col(graph_scale_panel),\n",
+    "        ])\n",
+    "    ]))\n",
     "\n",
     "    main_graph = dbc.Row(dbc.Col(\n",
     "        html.Div(cyto.Cytoscape(\n",
